--- a/BMI/app/src/main/res/layout/activity_main.xml
+++ b/BMI/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
                 android:layout_weight="0.6"
                 android:ems="10"
                 android:gravity="right"
-                android:inputType="number"
+                android:inputType="text"
                 android:text="175" />
         </LinearLayout>
 
@@ -65,7 +65,7 @@
                 android:layout_weight="0.6"
                 android:ems="10"
                 android:gravity="right"
-                android:inputType="number"
+                android:inputType="text"
                 android:text="65" />
         </LinearLayout>
 
