--- a/ImageviewDemo/app/src/main/res/layout/activity_main.xml
+++ b/ImageviewDemo/app/src/main/res/layout/activity_main.xml
@@ -44,14 +44,44 @@
             android:text="兔子" />
     </RadioGroup>
 
-    <ImageView
-        android:id="@+id/imgOutput"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:layout_width="257dp"
+        android:layout_height="506dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rgImages"
-        app:srcCompat="@mipmap/dog" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.284">
+
+        <ImageView
+            android:id="@+id/imgOutput2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            tools:srcCompat="@mipmap/elephant" />
+
+        <ImageView
+            android:id="@+id/imgOutput1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            tools:srcCompat="@mipmap/dog" />
+
+        <ImageView
+            android:id="@+id/imgOutput3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            tools:srcCompat="@mipmap/mouse" />
+
+        <ImageView
+            android:id="@+id/imgOutput4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="68dp"
+            android:visibility="gone"
+            tools:srcCompat="@mipmap/rabbit" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
